--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <script src="https://kit.fontawesome.com/c20613be44.js" crossorigin="anonymous"></script>
     <title>Doctor Strange</title>
 </head>
 <body>
@@ -47,10 +49,35 @@
             <a href="https://www.youtube.com/watch?v=aWzlQ2N6qqg" class="button">Assista o trailer &rightarrow;</a>
         </div>
 
-        <div class="social-container"></div>
+        <div class="social-container">
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </main>
 
-    <footer></footer>
+    <footer>
+        Copyright 2022 © | Maria Eduarda
+    </footer>
     
 </body>
 </html>
