--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <nav>
             <ul class="links-container">
                 <li>
-                    <a href="#">HOME</a>
+                    <a href="./index.html">HOME</a>
                 </li>
                 <li>
-                    <a href="#">PERSONAGENS</a>
+                    <a href="./pages/personagens.html">PERSONAGENS</a>
                 </li>
                 <li>
-                    <a href="#">GALERIA</a>
+                    <a href="./pages/galeria.html">GALERIA</a>
                 </li>
                 <li>
-                    <a href="#">VÍDEOS</a>
+                    <a href="./pages/videos.html">VÍDEOS</a>
                 </li>
             </ul>
         </nav>
