--- a/pages/videos.html
+++ b/pages/videos.html
@@ -14,29 +14,31 @@
         <nav>
             <ul class="links-container">
                 <li>
-                    <a href="./index.html">HOME</a>
+                    <a href="../index.html">HOME</a>
                 </li>
                 <li>
-                    <a href="./pages/personagens.html">PERSONAGENS</a>
+                    <a href="../pages/personagens.html">PERSONAGENS</a>
                 </li>
                 <li>
-                    <a href="./pages/galeria.html">GALERIA</a>
+                    <a href="../pages/galeria.html">GALERIA</a>
                 </li>
                 <li>
-                    <a href="./pages/videos.html">VÍDEOS</a>
+                    <a href="../pages/videos.html">VÍDEOS</a>
                 </li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <div class="trailer2">
-
+        <div class="teaser">
+            <img class="imgTeaser" src="../Img/teaser.jpg" alt="">
+            <a href="https://www.youtube.com/watch?v=mOuTbZhHCnY" class="link1">Teaser do Trailer 1 de Doutor Estranho no 
+                Multiverso da Loucura</a>
         </div>
 
         <div class="trailer2">
         <img class="img2" src="../Img/imgTrailer2.jpg" alt="">
-        <h2>Trailer 1 de Doutor Estranho no Multiverso da Loucura</h2>
+        <a href="https://www.youtube.com/watch?v=X23XCFgdh2M" class="link2">Trailer 1 de Doutor Estranho no Multiverso da Loucura</a>
         </div>
 
     </main>
