--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/menu-burger.css">
     <script src="https://kit.fontawesome.com/c20613be44.js" crossorigin="anonymous"></script>
+    <script src="./js/main.js" defer></script>
     <title>Doctor Strange</title>
 </head>
 <body>
@@ -20,6 +22,9 @@
             <img src="./Img/logo-marvel.png" alt="Logo da Marvel">
         </a>
         <nav>
+            <a href="#" class="menu-burger-container">
+                <i class="menu-burger"></i>
+            </a>
             <ul class="links-container">
                 <li>
                     <a href="./index.html">HOME</a>
