--- a/pages/videos.html
+++ b/pages/videos.html
@@ -30,15 +30,15 @@
     </header>
 
     <main>
+
         <div class="teaser">
-            <img class="imgTeaser" src="../Img/teaser.jpg" alt="">
-            <a href="https://www.youtube.com/watch?v=mOuTbZhHCnY" class="link1">Teaser do Trailer 1 de Doutor Estranho no 
-                Multiverso da Loucura</a>
-        </div>
+            <a href="https://www.youtube.com/watch?v=mOuTbZhHCnY">
+            <img class="imgTeaser" src="../Img/teaser1.png" alt=""></a>
+            </div>
 
         <div class="trailer2">
-        <img class="img2" src="../Img/imgTrailer2.jpg" alt="">
-        <a href="https://www.youtube.com/watch?v=X23XCFgdh2M" class="link2">Trailer 1 de Doutor Estranho no Multiverso da Loucura</a>
+        <a href="https://www.youtube.com/watch?v=X23XCFgdh2M">
+        <img class="img2" src="../Img/teaser2.png" alt=""></a>
         </div>
 
     </main>
