--- a/pages/videos.html
+++ b/pages/videos.html
@@ -33,12 +33,12 @@
 
         <div class="teaser">
             <a href="https://www.youtube.com/watch?v=mOuTbZhHCnY">
-            <img class="imgTeaser" src="../Img/teaser1.png" alt=""></a>
+            <img class="imgTeaser" src="../Img/teaser3.png" alt=""></a>
             </div>
 
         <div class="trailer2">
         <a href="https://www.youtube.com/watch?v=X23XCFgdh2M">
-        <img class="img2" src="../Img/teaser2.png" alt=""></a>
+        <img class="img2" src="../Img/trailer2.0.jpg" alt=""></a>
         </div>
 
     </main>
