--- a/pages/personagens.html
+++ b/pages/personagens.html
@@ -30,7 +30,7 @@
     </header>
 
     <main>
-        <section class="doctor" id="doctor">
+        <section class="doctor1" id="doctor">
             <h4>Doctor Strange</h4>
         </section>
 
