--- a/pages/personagens.html
+++ b/pages/personagens.html
@@ -30,17 +30,22 @@
     </header>
 
     <main>
-        <section class="doctor1" id="doctor">
-            <h4>Doctor Strange</h4>
-        </section>
+        <div class="personagens">
+            <div class="doctor">
+                <img class="imgDoctor" src="../Img/doctor.png" alt="">
+                <h3>Doctor Strange</h5>
+            </div>
 
-        <section class="wanda1" id="wanda">
-            <h4>Wanda Maximoff</h4>
-        </section>
+            <div class="wanda">
+                <img class="imgWanda" src="../Img/wanda.png" alt="">
+                <h3>Wanda Maximoff</h5>
+            </div>
 
-        <section class="wong1" id="wong">
-            <h4>Wong</h4>
-        </section>
+            <div>
+                <img class="imgWong" src="../Img/wong.png" alt>
+                <h3>Wong</h5>
+            </div>
+        </div>
     </main>
     
 </body>
