--- a/pages/videos.html
+++ b/pages/videos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./videos.css">
+    <link rel="stylesheet" href="../css/menu-burger.css">
     <title>Vídeos</title>
 </head>
 <body>
@@ -12,6 +13,9 @@
             <img src="../Img/logo-marvel.png" alt="Logo da Marvel">
         </a>
         <nav>
+            <a href="#" class="menu-burger-container">
+                <i class="menu-burger"></i>
+            </a>
             <ul class="links-container">
                 <li>
                     <a href="../index.html">HOME</a>
@@ -30,17 +34,20 @@
     </header>
 
     <main>
-
-        <div class="teaser">
-            <a href="https://www.youtube.com/watch?v=mOuTbZhHCnY">
-            <img class="imgTeaser" src="../Img/teaser3.png" alt=""></a>
+        <div class="imagens">
+            <div class="teaser">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/mOuTbZhHCnY" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
-        <div class="trailer2">
-        <a href="https://www.youtube.com/watch?v=X23XCFgdh2M">
-        <img class="img2" src="../Img/trailer2.0.jpg" alt=""></a>
-        </div>
-
+            <div class="trailer2">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/X23XCFgdh2M" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+    </div>
     </main>
+    <script src="../js/main.js"></script>
 </body>
 </html>
