--- a/pages/videos.html
+++ b/pages/videos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./videos.css">
     <link rel="stylesheet" href="../css/menu-burger.css">
+    <script src="../js/main.js"></script>
     <title>Vídeos</title>
 </head>
 <body>
