--- a/pages/personagens.html
+++ b/pages/personagens.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./personagens.css">
+    <link rel="stylesheet" href="../css/menu-burger.css">
+    <script src="../js/main.js" defer></script>
     <title>Personagens</title>
 </head>
 <body>
@@ -12,6 +14,9 @@
             <img src="../Img/logo-marvel.png" alt="Logo da Marvel">
         </a>
         <nav>
+            <a href="#" class="menu-burger-container">
+                <i class="menu-burger"></i>
+            </a>
             <ul class="links-container">
                 <li>
                     <a href="../index.html">HOME</a>
