--- a/pages/videos.html
+++ b/pages/videos.html
@@ -39,13 +39,13 @@
             <div class="teaser">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/mOuTbZhHCnY" 
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-                clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="img1"></iframe>
             </div>
 
             <div class="trailer2">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/X23XCFgdh2M" 
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-                clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="img2"></iframe>
             </div>
     </div>
     </main>
