--- a/pages/videos.html
+++ b/pages/videos.html
@@ -44,8 +44,8 @@
 
             <div class="trailer2">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/X23XCFgdh2M" 
-                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-                clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="img2"></iframe>
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="img2"></iframe>
             </div>
     </div>
     </main>
